# UCO_to_UDO_v2

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  README.md  background_worker.py  background_worker_guide.md  background_worker_test.py  compare_ranges.py  excel_utils.py  find_table_range.py  gui_excel_tool.py  import win32com.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: background_worker.md
logs/: UCOtoUDORecon_Log_2024-10-21_13-12-35.txt  UCOtoUDORecon_Log_2024-10-21_15-59-54.txt  UCOtoUDORecon_Log_2024-10-24_00-33-47.txt  UCOtoUDORecon_Log_2024-10-24_01-51-06.txt  UCOtoUDORecon_Log_2024-10-24_01-57-17.txt  UCOtoUDORecon_Log_2024-10-24_03-04-41.txt  UCOtoUDORecon_Log_2024-10-24_03-11-41.txt  UCOtoUDORecon_Log_2024-10-24_03-21-08.txt  UCOtoUDORecon_Log_2024-10-25_13-22-16.txt  UCOtoUDORecon_Log_2024-10-29_08-45-11.txt  UCOtoUDORecon_Log_2024-10-29_08-55-56.txt  UCOtoUDORecon_Log_2024-10-30_16-29-29.txt  UCOtoUDORecon_Log_2024-10-31_14-43-02.txt  UCOtoUDORecon_Log_2024-10-31_15-11-04.txt  UCOtoUDORecon_Log_2024-10-31_15-16-49.txt  UCOtoUDORecon_Log_2024-10-31_15-40-37.txt  UCOtoUDORecon_Log_2024-10-31_16-17-26.txt  UCOtoUDORecon_Log_2024-10-31_16-38-10.txt  UCOtoUDORecon_Log_2024-10-31_18-17-36.txt  UCOtoUDORecon_Log_2024-10-31_19-07-49.txt  UCOtoUDORecon_Log_2024-10-31_19-27-27.txt  UCOtoUDORecon_Log_2024-10-31_19-35-39.txt  UCOtoUDORecon_Log_2024-10-31_19-42-18.txt  UCOtoUDORecon_Log_2024-10-31_20-08-19.txt  UCOtoUDORecon_Log_2024-10-31_21-54-04.txt  UCOtoUDORecon_Log_2024-11-01_17-45-06.txt  (+21 more)
(+12 files in other folders)
